test_suite/syntax_test_cases/reservedWords.wacc
# reserved keywords

# Output:
# #syntax_error#

# Exit:
# 100


# Program:

begin
  int is() is
    return 0 
  end
  skip
end
